tests/snapshots/diagnostic_tests__ui@circular_alias.au.snap
---
source: tests/diagnostic_tests.rs
expression: "type A = B\ntype B = []A\n\nfn main() {}\n"
input_file: tests/inputs/diagnostics/circular_alias.au
---
Error: Circular type alias
   ╭─[ main:1:6 ]
   │
 2 │ type B = []A
   │      ┬  
   │      ╰── Because it includes this type, which causes the circular reference
   │
   ├─[ main:1:6 ]
   │
 1 │ type A = B
   │      ┬  
   │      ╰── A type alias must not refer to itself
───╯
